fixed bad navigation when completing an order, added user-select none to some components, removed som vertical spacing on mobile, added new text to about us page and added font-size, made modification to blobs in body, added word count and limit on comments to order + removed some spacing

--- a/client/src/components/PopularProductCarousel/popularProductCarousel.css
+++ b/client/src/components/PopularProductCarousel/popularProductCarousel.css
@@ -47,6 +47,7 @@
 }
 
 .PopularProductCarousel__button-text {
+    user-select: none;
     font-size: var(--font-size-3xl);
     color: var(--color-accent1);
     filter: drop-shadow(var(--shadow-s));
