--- a/client/src/components/PopularProductItem/popularProductItem.css
+++ b/client/src/components/PopularProductItem/popularProductItem.css
@@ -12,6 +12,7 @@
 
 .popular-product-item__image {
     width: 150px;
+    user-select: none;
 }
 
 .popular-product-item-1 {
@@ -116,6 +117,7 @@
     .product-list-item {
         min-width: unset;
     }
+
     .popular-product-item-1,
     .popular-product-item-2,
     .popular-product-item-4,
@@ -162,6 +164,7 @@
 }
 
 @media screen and (max-width: 530px) {
+
     .popular-product-item-1,
     .popular-product-item-2,
     .popular-product-item-4,
@@ -171,6 +174,7 @@
 }
 
 @media screen and (max-width: 420px) {
+
     .popular-product-item-1,
     .popular-product-item-2,
     .popular-product-item-4,
