--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,9 +65,10 @@ body {
     font-family: var(--bread-font);
     background-image: url(/images/blotches/by0-pink-cola-blue.svg), url(/images/blotches/cSe-cola-pink-blue.svg),
         url(/images/blotches/491-blue-pink-cola.svg), url(/images/blotches/dotHb-cola-blue-pink.svg),
-        url(/images/blotches/cSe-cola-pink-blue.svg);
-    background-position: left 70svh, right 1000svh, right 110svh, left 150svh, right bottom;
+        url(../../client/public/images/blotches/u-e-t-a-darkblue-pink-white-cola.svg), url(/images/blotches/by0-pink-cola-blue.svg), url(/images/blotches/cSe-cola-pink-blue.svg);
+    background-position: left 90svh, right 100svh, right 110svh, left 150svh, left 180svh, right 200svh, left 240svh;
     background-repeat: no-repeat;
+    background-size: 50rem;
     overflow-y: scroll;
 }
 
