--- a/client/src/pages/FinalizeOrderPage/finalizeOrder.css
+++ b/client/src/pages/FinalizeOrderPage/finalizeOrder.css
@@ -13,6 +13,7 @@
 
 .finalize-page__order-list {
     padding-right: var(--spacing-m);
+    background-color: var(--bg-primary);
     overflow-y: auto;
     max-height: 40svh;
     display: grid;
@@ -30,10 +31,12 @@
 .finalize-page__comment-form {
     width: 100%;
     display: grid;
+    position: relative;
+
 }
 
 .finalize-page__textarea {
-    margin-top: var(--spacing-2xl);
+    margin-top: var(--spacing-l);
     grid-column: 1/-1;
     min-height: var(--spacing-3xl);
     padding: var(--spacing-s);
@@ -41,6 +44,15 @@
     font-size: var(--font-size-m);
 }
 
+.finalize-page__comment-count {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    color: gray;
+    font-size: var(--font-size-m);
+}
+
 .finalize-page .text-button {
     justify-self: end;
+    box-shadow: 3px 4px 0 0 var(--color-black), 0 0 0 var(--spacing-s) var(--bg-primary);
 }
